--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,13 +19,23 @@ jobs:
       - name: Install requirements
         run:
           python -m pip install -r src/requirements.txt
-          python -m pip install pytest
+  #        python -m pip install pytest
       - name: Run tests
         env:
           MODE: "github actions"
         run:
           pytest src/tests.py
 
-  # build_deploy:
-  #   needs: test
-  #   runs-on: ubuntu-latest
+  build_deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    - name: Build container image
+      run:
+        docker build -f Dockerfile -t serverless-py .
